--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
+<!--
+	This is the template VS Code enters with the shortcut "!"
+
 <!DOCTYPE html>
-
 <html lang="en">
-    <head> 
-        <meta charset="utf=8">
-        <title>My first webpage</title>
-    </head>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
 
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+-->
+
+<!-- this is all that is required for initial webpages -->
+<!DOCTYPE html>
+<html lang="en"> 
+<head>
+	<meta charset="utf-8">
+	<title>My First Webpage</title>
+</head>
+    
+<body>
+	<h1>Hello World!</h1>
+</body>
 </html>
