--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 </head>
     
 <body>
-	<h1>Hello World!</h1>
+	<h1>A heading 1: Mazin's blog</h1>
+	<h2>A heading 2: Testing out the headings for my blog</h2>
+	<h3>A heading 3: This is a heading within a heading&mdash;a subheading</h3>
+
+	<p>Content for the paragraphs would go here.</p>
+
+	<p>This is another paragraph with <strong>bold text.</strong></p>
+	<p>Here is another paragraph with <em>italicized text.</em></p>
+
+	<h2>A heading 2: This is another heading</h2>
+	<h3>A heading 3: Here is another subheading and below are examples of the other headings</h3>
+	<h4>A heading 4</h4>
+	<h5>A heading 5</h5>
+	<h6>A heading 6</h6>
 </body>
 </html>
