Add two more recipes to the webpage one for spaghetti and one for soda bread

--- a/odin-recipes/recipes/lasagna.html
+++ b/odin-recipes/recipes/lasagna.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="https://hips.hearstapps.com/vidthumb/images/180820-bookazine-delish-01280-1536610916.jpg?crop=1xw:1xh;center,top&resize=768:*" alt="a picture of tasty, cheesy lasagna">
+
+    <p>This is a simple recipe for delicious lasagna.</p>
 
     <h2>Ingredients</h2>
     <ul>
