--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/spaghetti.html">Spaghetti Aglio e Olio</a></li>
+            <li><a href="./recipes/soda-bread.html">Irish Soda Bread</a></li>
+        </ul>
+        
     </body>
 </html>
