Add styles to Odin Recipes website

--- a/odin-recipes/recipes/soda-bread.html
+++ b/odin-recipes/recipes/soda-bread.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
+    <title>Irish soda bread recipe</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="https://www.simplyrecipes.com/thmb/vmcYGNrkXUvcWtm-TvSdhe3DdAE=/648x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2015__03__irish-soda-bread-vertical-a-1800-d41a7ee1e92e48bdbe7836499ac80fe0.jpg" alt="a picture of irish soda bread">
-
+    <h1>Irish Soda Bread</h1>
+    <div class="image-container">
+        <img class="image" src="https://www.simplyrecipes.com/thmb/vmcYGNrkXUvcWtm-TvSdhe3DdAE=/648x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2015__03__irish-soda-bread-vertical-a-1800-d41a7ee1e92e48bdbe7836499ac80fe0.jpg" alt="a picture of irish soda bread">
+    </div>
     <p>This is a simple recipe for irish soda bread.</p>
 
     <h2>Ingredients</h2>
@@ -26,14 +28,15 @@
     </ul>
 
     <h2>Directions</h2>
+    <div class="steps">
+        <h3>Step 1</h3>
+        <p>Preheat oven to 375 degrees F (190 degrees C). Lightly grease a large baking sheet.</p>
 
-    <h3>Step 1</h3>
-    <p>Preheat oven to 375 degrees F (190 degrees C). Lightly grease a large baking sheet.</p>
+        <h3>Step 2</h3>
+        <p>In a large bowl, mix together flour, sugar, baking soda, baking powder, salt and margarine. Stir in 1 cup of buttermilk and egg. Turn dough out onto a lightly floured surface and knead slightly. Form dough into a round and place on prepared baking sheet. In a small bowl, combine melted butter with 1/4 cup buttermilk; brush loaf with this mixture. Use a sharp knife to cut an 'X' into the top of the loaf.</p>
 
-    <h3>Step 2</h3>
-    <p>In a large bowl, mix together flour, sugar, baking soda, baking powder, salt and margarine. Stir in 1 cup of buttermilk and egg. Turn dough out onto a lightly floured surface and knead slightly. Form dough into a round and place on prepared baking sheet. In a small bowl, combine melted butter with 1/4 cup buttermilk; brush loaf with this mixture. Use a sharp knife to cut an 'X' into the top of the loaf.</p>
-
-    <h3>Step 3</h3>
-    <p>Bake in preheated oven until a toothpick inserted into the center of the loaf comes out clean, 45 to 50 minutes. Check for doneness after 30 minutes. You may continue to brush the loaf with the butter mixture while it bakes.</p>
+        <h3>Step 3</h3>
+        <p>Bake in preheated oven until a toothpick inserted into the center of the loaf comes out clean, 45 to 50 minutes. Check for doneness after 30 minutes. You may continue to brush the loaf with the butter mixture while it bakes.</p>
+    </div>
 </body>
 </html>
