--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
         <title>Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class="main-list">
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/spaghetti.html">Spaghetti Aglio e Olio</a></li>
             <li><a href="./recipes/soda-bread.html">Irish Soda Bread</a></li>
