--- a/odin-recipes/recipes/lasagna.html
+++ b/odin-recipes/recipes/lasagna.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
+    <title>Lasagna recipe</title>
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="https://hips.hearstapps.com/vidthumb/images/180820-bookazine-delish-01280-1536610916.jpg?crop=1xw:1xh;center,top&resize=768:*" alt="a picture of tasty, cheesy lasagna">
-
+    <div class="image-container">
+        <img class="image" src="https://hips.hearstapps.com/vidthumb/images/180820-bookazine-delish-01280-1536610916.jpg?crop=1xw:1xh;center,top&resize=768:*" alt="a picture of tasty, cheesy lasagna">
+    </div>
     <p>This is a simple recipe for delicious lasagna.</p>
 
     <h2>Ingredients</h2>
@@ -25,17 +27,18 @@
     </ul>
 
     <h2>Directions</h2>
+    <div class="steps">
+        <h3>Step 1</h3>
+        <p>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</p>
 
-    <h3>Step 1</h3>
-    <p>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</p>
+        <h3>Step 2</h3>
+        <p>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</p>
 
-    <h3>Step 2</h3>
-    <p>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</p>
+        <h3>Step 3</h3>
+        <p>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</p>
 
-    <h3>Step 3</h3>
-    <p>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</p>
-
-    <h3>Step 4</h3>
-    <p>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</p>
+        <h3>Step 4</h3>
+        <p>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</p>
+    </div>
 </body>
 </html>
