--- a/03-css-exercises_flex/02-flex-header/index.html
+++ b/03-css-exercises_flex/02-flex-header/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,11 @@
     <title>Flex Header</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
+
     <div class="header">
+
       <div class="left-links">
         <ul>
           <li><a href="#">ONE</a></li>
@@ -16,14 +20,19 @@
           <li><a href="#">THREE</a></li>
         </ul>
       </div>
+
       <div class="logo">LOGO</div>
+
       <div class="right-links">
         <ul>
-          <li><a href="#">FOUR</a></li>
+          <li class="push"><a href="#">FOUR</a></li>
           <li><a href="#">FIVE</a></li>
           <li><a href="#">SIX</a></li>
         </ul>
       </div>
+
     </div>
+
   </body>
+
 </html>
