--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header-body">
         <div class="header-links-logo">
-            <h2>Header Logo</h2>
+            <h2 class="header-logo">Header Logo</h2>
             <div class="links">
                 <a href="#">header link one</a>
                 <a href="#">header link two</a>
@@ -26,8 +26,27 @@
             </div>
         </div>
     </div>
-    <div>
 
+    <div class="info-header">
+        <p class="random-info">Some random information.</p>
+        <div class="img-and-subtext">
+            <div class="img-bordered">
+                <div class="img-box"></div>
+                <p class="img-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="img-bordered">
+                <div class="img-box"></div>
+                <p class="img-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="img-bordered">
+                <div class="img-box"></div>
+                <p class="img-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="img-bordered">
+                <div class="img-box"></div>
+                <p class="img-subtext">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
