Complete quote section and add Roboto font

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- add the fonts required */ -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet"> 
+    <!-- add the fonts required */ -->
+
 </head>
 <body>
     <div class="header-body">
@@ -47,6 +54,11 @@
                 <p class="img-subtext">this is some subtext under an illustration or image</p>
             </div>
         </div>
+    </div>
+
+    <div class="quote-section">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="attribution">- Thor, God of Thunder</p>
     </div>
 </body>
 </html>
