--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -71,6 +71,8 @@
         </div>
     </div>
 
-
+    <div class="footer">
+        <p>Copyright &copy; The Odin Project 2021</p>
+    </div>
 </body>
 </html>
