Complete the multiple function in js-fundamentals

--- a/basic-javascript/js-fundamentals-part3.html
+++ b/basic-javascript/js-fundamentals-part3.html
@@ -26,10 +26,13 @@
 
         //add7
         function add7(num) {
-            return num + 7
+            return num + 7;
         }
 
         //multiply
+        function multiply(num1, num2) {
+            return num1 * num2;
+        }
 
         //capitalize
 
