Complete the capitalize function in js-fundamentals

--- a/basic-javascript/js-fundamentals-part3.html
+++ b/basic-javascript/js-fundamentals-part3.html
@@ -35,6 +35,12 @@
         }
 
         //capitalize
+        function capitalize(str) {
+            lower_str = str.toLowerCase();
+            first_letter = lower_str[0].toUpperCase();
+            all_other_letters = lower_str.slice(1);
+            return first_letter + all_other_letters;
+        }
 
         //lastLetter
     </script>
