Complete the lastLetter function in js-fundamentals

--- a/basic-javascript/js-fundamentals-part3.html
+++ b/basic-javascript/js-fundamentals-part3.html
@@ -43,6 +43,9 @@
         }
 
         //lastLetter
+        function lastLetter(str) {
+            return str.slice(-1);
+        }
     </script>
 </body>
 </html>
